--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: '3.1'
 
 services:
+  db:
+    image: mysql:8.0
+    platform: linux/x86_64
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: cms
+      MYSQL_DATABASE: cms
+      MYSQL_USER: cms
+      MYSQL_PASSWORD: cms
+    ports:
+      - 3306:3306
+    volumes:
+      - ./mysql-data:/var/lib/mysql
+      - ./docker/mysql/my-custom.cnf:/etc/mysql/conf.d/my-custom.cnf
   app:
     build:
       context: ./docker/php-fpm
@@ -8,8 +23,6 @@ services:
         UID: ${UID}
         GID: ${GID}
     container_name: cms-app
-    networks:
-      - cms-web_default
     volumes:
       - ./:/var/www/html
     working_dir: /var/www/html
@@ -29,17 +42,9 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - '8000:80'
-    networks:
-      - cms-web_default
 
   redis:
     image: redis:alpine
     container_name: cms-redis
     ports:
       - 6380:6379
-    networks:
-      - cms-web_default
-
-networks:
-  cms-web_default:
-    external: true
