--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
@@ -11,8 +11,24 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
+        "dotenv-webpack": "^7.0.3",
+        "eslint": "^7.2.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-vue": "^6.2.2",
+        "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "prettier": "^2.0.5",
+        "sass": "^1.34.0",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.7.10"
+    },
+    "dependencies": {
+        "autoprefixer": "10.4.5",
+        "vue": "^2.6.14",
+        "vuetify": "^2.6.10"
     }
 }
