--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=ce8c9ea421982c76f998",
-    "/css/app.css": "/css/app.css?id=d41d8cd98f00b204e980"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
