--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "sass": "^1.34.0",
         "sass-loader": "^8.0.2",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-        "vue-template-compiler": "^2.7.10"
+        "vue-template-compiler": "^2.7.10",
+        "resolve-url-loader": "^3.1.0"
     },
     "dependencies": {
         "vue": "^2.6.14",
