--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
         "resolve-url-loader": "^3.1.0"
     },
     "dependencies": {
-        "vue": "^2.6.14",
-        "vuetify": "^2.6.10"
+        "vue": "^2.6.14"
     }
 }
