update css webpack

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
+    "/css/sb-admin-2.css": "/css/sb-admin-2.css?id=6025f6d3893c51173125",
     "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js?id=68475071cb6966c4b228"
 }
