--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 UID=1000
 GID=1000
+
+CLOUDINARY_URL=cloudinary://962638458986187:B-SVpak4CO9cf3s_nSI7i1u63Sg@dzoocwvq8
+CLOUDINARY_UPLOAD_PRESET=ml_default
+CLOUDINARY_NOTIFICATION_URL=
