--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/css/sb-admin-2.css": "/css/sb-admin-2.css?id=e118b918176bf3d96138",
-    "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js?id=68475071cb6966c4b228"
+    "/css/sb-admin-2.css": "/css/sb-admin-2.css?id=58c57a84232bfb68222b",
+    "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js?id=68475071cb6966c4b228",
+    "/js/demo/datatables-demo.js": "/js/demo/datatables-demo.js?id=cf2bdea415780c215c59"
 }
