--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/css/sb-admin-2.css": "/css/sb-admin-2.css?id=58c57a84232bfb68222b",
-    "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js?id=68475071cb6966c4b228",
-    "/js/demo/datatables-demo.js": "/js/demo/datatables-demo.js?id=cf2bdea415780c215c59"
+    "/js/app.js": "/js/app.js?id=62a32cf7e989ee7f342d",
+    "/css/sb-admin-2.css": "/css/sb-admin-2.css?id=2911d10f414a46152eba",
+    "/js/sb-admin-2.min.js": "/js/sb-admin-2.min.js?id=b766fdbc011fbc12ff62",
+    "/js/demo/datatables-demo.js": "/js/demo/datatables-demo.js?id=a517b95a6e62fa8b3759"
 }
