--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
         "lodash": "^4.17.19",
         "postcss": "^7.0.39",
         "prettier": "^2.0.5",
+        "resolve-url-loader": "^3.1.0",
         "sass": "^1.34.0",
         "sass-loader": "^8.0.2",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-        "vue-template-compiler": "^2.7.10",
-        "resolve-url-loader": "^3.1.0"
+        "vue-template-compiler": "^2.7.10"
     },
     "dependencies": {
-        "vue": "^2.6.14"
+        "vue": "^2.6.14",
+        "vue-color": "^2.8.1"
     }
 }
