--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "dependencies": {
         "vue": "^2.6.14",
-        "vue-color": "^2.8.1"
+        "vue-color": "^2.8.1",
+        "vue-popperjs": "^2.3.0"
     }
 }
