--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
         "vue-template-compiler": "^2.7.10"
     },
     "dependencies": {
+        "uuid": "^9.0.1",
         "vue": "^2.6.14",
         "vue-color": "^2.8.1",
-        "vue-popperjs": "^2.3.0"
+        "vue-popperjs": "^2.3.0",
+        "vue-toastification": "^1.7.14"
     }
 }
