--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     volumes:
       - ./:/var/www/html
     working_dir: /var/www/html
-    user: ${UID}:${GID}
+    user: root:root
 
   webserver:
     image: nginx
