--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vue": "^2.6.14",
         "vue-color": "^2.8.1",
         "vue-popperjs": "^2.3.0",
+        "vue-smooth-dnd": "^0.8.1",
         "vue-toastification": "^1.7.14"
     }
 }
